[package]
name = "rs-nfsv2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "macros", "rt-multi-thread"] }
byteorder = "1"
bytes = "1"
rustix = { version = "1", features = ["fs", "process"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.103"
